# plasma-webqq

./: CMakeLists.txt  Messages.sh  plasma-containment-webqq.desktop  plasma_webqq.notifyrc  webqq.cpp  webqq.h  webqqconfig.ui
po/: CMakeLists.txt  plasma_applet_webqq.pot  zh_CN.po
